Removed Spring Security using LDAP